--- a/public/index.html
+++ b/public/index.html
@@ -1,60 +1,1 @@
-<!DOCTYPE html>
-<html class="no-js" lang="en">
-
-
-<!-- Mirrored from eaglestheme.com/html/deaxautt/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Feb 2024 22:33:44 GMT -->
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Deaxautt - Digital Marketing & Creative Agency Template</title>
-  <meta name="description" content>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
-  <!-- Place favicon.ico in the root directory -->
-
-  <!-- CSS here -->
-  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/css/animate.min.css">
-  <link rel="stylesheet" href="assets/css/magnific-popup.css">
-  <link rel="stylesheet" href="assets/css/fontawesome-all.min.css">
-  <link rel="stylesheet" href="assets/css/default-icons.css">
-  <link rel="stylesheet" href="assets/css/odometer.css">
-  <link rel="stylesheet" href="assets/css/slick.css">
-  <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
-  <link rel="stylesheet" href="assets/css/spacing.css">
-  <link rel="stylesheet" href="assets/css/main.css">
-</head>
-  <body class="position-relative">
-    
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-    <script src="assets/js/vendor/jquery-3.6.0.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/isotope.pkgd.min.js"></script>
-    <script src="assets/js/imagesloaded.pkgd.min.js"></script>
-    <script src="assets/js/jquery.magnific-popup.min.js"></script>
-    <script src="assets/js/jquery.odometer.min.js"></script>
-    <script src="assets/js/jquery.appear.js"></script>
-    <script src="assets/js/gsap.js"></script>
-    <script src="assets/js/ScrollTrigger.js"></script>
-    <script src="assets/js/SplitText.js"></script>
-    <script src="assets/js/gsap-animation.js"></script>
-    <script src="assets/js/slick.min.js"></script>
-    <script src="assets/js/ajax-form.js"></script>
-    <script src="assets/js/parallaxScroll.min.js"></script>
-    <script src="assets/js/swiper-bundle.esm.browser.min.js"></script>
-    <script src="assets/js/wow.min.js"></script>
-    <script src="assets/js/main.js"></script>
-  </body>
-</html>
+<!doctype html><html class="no-js" lang="en"><head><meta charset="utf-8"><meta http-equiv="x-ua-compatible" content="ie=edge"><title>Deaxautt - Digital Marketing & Creative Agency Template</title><meta name="description" content><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png"><link rel="stylesheet" href="assets/css/bootstrap.min.css"><link rel="stylesheet" href="assets/css/animate.min.css"><link rel="stylesheet" href="assets/css/magnific-popup.css"><link rel="stylesheet" href="assets/css/fontawesome-all.min.css"><link rel="stylesheet" href="assets/css/default-icons.css"><link rel="stylesheet" href="assets/css/odometer.css"><link rel="stylesheet" href="assets/css/slick.css"><link rel="stylesheet" href="assets/css/swiper-bundle.min.css"><link rel="stylesheet" href="assets/css/spacing.css"><link rel="stylesheet" href="assets/css/main.css"><script defer="defer" src="/static/js/main.ab6c698c.js"></script><link href="/static/css/main.f855e6bc.css" rel="stylesheet"></head><body class="position-relative"><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script src="assets/js/vendor/jquery-3.6.0.min.js"></script><script src="assets/js/bootstrap.min.js"></script><script src="assets/js/isotope.pkgd.min.js"></script><script src="assets/js/imagesloaded.pkgd.min.js"></script><script src="assets/js/jquery.magnific-popup.min.js"></script><script src="assets/js/jquery.odometer.min.js"></script><script src="assets/js/jquery.appear.js"></script><script src="assets/js/gsap.js"></script><script src="assets/js/ScrollTrigger.js"></script><script src="assets/js/SplitText.js"></script><script src="assets/js/gsap-animation.js"></script><script src="assets/js/slick.min.js"></script><script src="assets/js/ajax-form.js"></script><script src="assets/js/parallaxScroll.min.js"></script><script src="assets/js/swiper-bundle.esm.browser.min.js"></script><script src="assets/js/wow.min.js"></script><script src="assets/js/main.js"></script></body></html>
